--- a/src/components/Header/HeaderTop/headerTop.css
+++ b/src/components/Header/HeaderTop/headerTop.css
@@ -1,12 +1,34 @@
 #headerTop_div {
+    box-sizing       : border-box;
+    padding          : 0 15px 0 15px;
+    font-family      : 'Rubik', sans-serif;
+    letter-spacing   : 1px;
+    font-size        : 14px;
+    font-weight      : normal;
+    line-height      : 24px;
+    background-color : white;
+}
 
-    box-sizing     : border-box;
-    padding        : 0 15px 0 15px;
-    font-family    : 'Rubik', sans-serif;
-    letter-spacing : 1px;
-    font-size      : 14px;
-    font-weight    : normal;
-    line-height    : 24px;
+#headerTop_div div {
+    display : inline-block;
+}
+
+#headerTop_div > div > nav > ul > li > div {
+    margin-top : 10px;
+}
+
+#headerTop_div > div {
+    border-bottom   : 1px solid #ededed;
+    justify-content : space-between;
+    margin          : 0 auto;
+    height          : 52px;
+    padding         : 0;
+}
+
+#headerTop_div > div > p {
+    color       : black;
+    line-height : 24px;
+    margin      : 0;
 }
 
 #headerTop_div ul {
@@ -16,38 +38,17 @@
 }
 
 
-#headerTop_div div:first-child {
-    border-bottom   : 1px solid #ededed;
-    margin          : 0 auto;
-    padding         : 0;
-    justify-content : space-between;
-    height          : 52px;
+#headerTop_div > div > nav > ul > li {
+    display  : inline-block;
+    position : relative;
+    margin   : 0 0 0 15px;
+    height   : 52px;
 }
 
-
-#headerTop_div div:first-child nav > ul > li {
-    display : inline-block;
-    margin  : 0 0 0 15px;
-    height  : 52px;
-    border  : 1px solid black;
-
-}
-
-#headerTop_div > div > p {
-    line-height : 24px;
-    margin      : 0;
-    color       : black;
-}
-
-#headerTop_div > div > nav {
-    line-height : 21px;
-}
-
-#headerTop_div > div > nav > ul {
+#headerTop_div > div > nav > ul > li:first-child {
     margin-left : 0;
-    position    : relative;
-    
 }
+
 
 #headerTop_div > div > nav > ul > li:nth-child(-n+2)::after {
     content      : "|";
@@ -55,23 +56,29 @@
     color        : #999999;
 }
 
-#headerTop_div > div nav ul li i {
+#headerTop_div > div > nav > ul > li > i {
     font-size   : 12px;
     margin-left : 8px;
 }
 
+
 /*dropDownsStart*/
-#drop {
-    box-shadow       : 0 1px 7px -2px rgba(0, 0, 0, 0.3);
-    position         : absolute;
-    background-color : white;
-    line-height      : 32px;
-    visibility       : visible;
+#dropDown {
+    box-shadow          : 0 1px 7px -2px rgba(0, 0, 0, 0.3);
+    position            : absolute;
+    background-color    : white;
+    line-height         : 32px;
+    visibility          : hidden;
+    top                 : 50px;
+    width               : 140px;
+    transition-duration : 2s;
+    height              : 10px;
+    overflow            : hidden;
 
 }
 
-#drop > li {
-    font-size   : 13px;
+#dropDown > li {
+    font-size   : 12px;
     margin-left : 12px;
 
 }
@@ -79,12 +86,25 @@
 /*dropDownsEnd*/
 
 /*HoversStart*/
-#headerTop_div > div > nav > ul > li:first-of-type:hover #drop {
+#headerTop_div > div > nav > ul > li:nth-child(1):hover > ul {
     visibility : visible;
+    height     : 100px;
+}
 
+#headerTop_div > div > nav > ul > li:nth-child(2):hover > ul {
+    visibility : visible;
+    width      : 100px;
+}
+
+#headerTop_div > div > nav > ul > li:nth-child(3):hover > ul {
+    visibility : visible;
+    width      : 100px;
+    right      : 0px;
 }
 
 /*HoversEnd*/
+
+
 
 
 
